# AIE6_Final_Project_Polarion_AI_Assistant

./: README.md  app.py  eval.py  polarion_ai_assistant_with_heading.ipynb  pyproject.toml
polarion_doc_indexer/: indexer.py
